# tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  tools.pro
.reuse/: dep5
CodeForWeb/: CMakeLists.txt  CodeForWeb.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  resources.qrc
GitStat/: CMakeLists.txt  GitStat.pro  README.md  main.cpp
LicenseChange/: CMakeLists.txt  LicenseChange.pro  README.md  delayedexecutiontimer.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  model.cpp  model.hpp  proxy.cpp  proxy.hpp  resources.qrc  textedit.cpp  textedit.hpp  worker.cpp  worker.hpp
LicenseChange/LicenseChange/: CMakeLists.txt  LicenseChange.pro  delayedexecutiontimer.cpp  delayedexecutiontimer.hpp  info_dialog.cpp  info_dialog.hpp  info_dialog.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  opts_dialog.cpp  opts_dialog.hpp  opts_dialog.ui  proxy.cpp  proxy.hpp  resources.qrc  textedit.cpp  textedit.hpp  worker.cpp  worker.hpp
LicenseChange/tests/: CMakeLists.txt
LicenseChange/tests/auto/: CMakeLists.txt  auto.pro
LicenseChange/tests/auto/utils/: CMakeLists.txt  main.cpp  utils.pro
LicenseChange/utils/: CMakeLists.txt  utils.cpp  utils.hpp  utils.pro
Magnifier/: CMakeLists.txt  Magnifier.pro  README.md  cfg.qtconf  constants.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  opts_dialog.cpp  opts_dialog.hpp  opts_dialog.ui  resources.qrc  zoomwindow.cpp  zoomwindow.hpp
PhraseGen/: CMakeLists.txt  PhraseGen.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resources.qrc
